--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
     "pg": "^8.12.0",
+    "tsc-alias": "^1.8.10",
     "vite-tsconfig-paths": "^5.0.1"
   }
 }
