chore: adjusts in vercel config file

--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,21 @@
   "builds": [
     {
       "src": "server.js",
+      "config": {
+        "includeFiles": [
+          "dist/**"
+        ]
+      },
       "use": "@vercel/node"
     },
     {
       "src": "public/**",
-      "use": "@vercel/static"
+      "use": "@vercel/static",
+      "config": {
+        "includeFiles": [
+          "src/public/**"
+        ]
+      }
     }
   ],
   "routes": [
