chore: adjusts in vercel config file

--- a/vercel.json
+++ b/vercel.json
@@ -4,32 +4,22 @@
   "public": true,
   "builds": [
     {
-      "src": "server.js",
-      "config": {
-        "includeFiles": [
-          "dist/**"
-        ]
-      },
+      "src": "src/server.js",
       "use": "@vercel/node"
     },
     {
-      "src": "public/**",
-      "use": "@vercel/static",
-      "config": {
-        "includeFiles": [
-          "src/public/**"
-        ]
-      }
+      "src": "src/public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/((?!.*\\.\\w+$).*)",
-      "dest": "/server.js"
+      "dest": "src/server.js"
     },
     {
       "src": "/(.+\\.[a-z]+)$",
-      "dest": "/public/$1"
+      "dest": "src/public/$1"
     }
   ]
 }
